--- a/yourvocab/templates/yourvocab/lesson.html
+++ b/yourvocab/templates/yourvocab/lesson.html
@@ -2,7 +2,9 @@
 
 {% block content %}
 
-<p class="h2"> {{ lesson.name }}</p>
+<p class="h2"> {{ course.name }}</p>
+
+<p class="h3"> {{ lesson.name }}</p>
 
 <div class="col-md-8">
     <p class="col-md-8">Lesson was attended {{ lesson.attendance_count}} times</p>
@@ -18,8 +20,16 @@
     {% endfor %}
 </div>
 
-<div class="col-md-8">
+<div class="row">
 
+{% if qa.count > 0 %}
+<div class="col-md-8">
+    <a href="/course/{{ course.id }}/lesson/{{ lesson.id }}/check" class="btn btn-primary">Run lesson</a>
+</div>
+{% endif %}
+
+<div class="col-md-8">
     <a href="" class="btn btn-primary">Edit lesson</a>
+</div>
 </div>
 {% endblock content %}
