--- a/yourvocab/templates/registration/login.html
+++ b/yourvocab/templates/registration/login.html
@@ -11,7 +11,7 @@
         <table>
             {{ form.as_table }}
         </table>
-        <button type="submit">Log in</button>
+        <button class='btn btn-primary' type="submit">Log in</button>
         <div>
             <a href="/signup">New to YourVocab? Sign up</a>
         </div>
