--- a/yourvocab/templates/signup.html
+++ b/yourvocab/templates/signup.html
@@ -7,6 +7,6 @@
         <table>
             {{ form.as_table }}
         </table>
-        <button type="submit">Sign up</button>
+        <button class='btn btn-primary' type="submit">Sign up</button>
     </form>
 {% endblock %}
