--- a/yourvocab/templates/yourvocab/check.html
+++ b/yourvocab/templates/yourvocab/check.html
@@ -16,12 +16,12 @@
         <div id="RespondingPart">
             <p>Answer: <input name="answer" type="text" id="answer_field"/></p>
             <div><a href="#" onclick="return submitForm(true, false);">Show right answer</a></div>
-            <button type="submit">Submit</button>
+            <button class='btn btn-primary' type="submit">Submit</button>
             <div><p id="mistake_field" style="display: none;">Wrong answer. Try again or press 'Show answer'.</p></div>
         </div>
         <div id="hint_row" style="display: none;">
             <p id="hint_field"></p>
-            <button type="button" onclick="return submitForm(false, true)">Next</button>
+            <button class='btn btn-primary' type="button" onclick="return submitForm(false, true)">Next</button>
         </div>
         <div><p id="score_field">Initial score: 0. Good luck!</p></div>
     </form>
