--- a/yourvocab/templates/yourvocab/course.html
+++ b/yourvocab/templates/yourvocab/course.html
@@ -5,6 +5,7 @@
 <p class="h2"> {{ course.name }}</p>
 
 <div class="col-md-8">
+    <p class="col-md-8">Helper symbols: {{ course.helper_symbols }}</p>
     <p class="col-md-8">Right answer bonus: +{{ setup.answer_bonus }}</p>
     <p class="col-md-8">Wrong answer penalty: -{{ setup.mistake_penalty }}</p>
     <p class="col-md-8">Show answer penalty: -{{ setup.show_answer_penalty }}</p>
