--- a/yourvocab/templates/signup.html
+++ b/yourvocab/templates/signup.html
@@ -4,7 +4,7 @@
     <h2>Sign up</h2>
     <form method="post">
         {% csrf_token %}
-        <table>
+        <table class="table">
             {{ form.as_table }}
         </table>
         <button class='btn btn-primary' type="submit">Sign up</button>
