--- a/yourvocab/templates/yourvocab/new_course.html
+++ b/yourvocab/templates/yourvocab/new_course.html
@@ -5,11 +5,13 @@
         <div class="row">
             <div class="col">
                 <p>
-                    <form action="" method="post">
+                <form action="" method="post">
                     {% csrf_token %}
-                    {{ form.as_p }}
-                    <input type="submit" value="Create" />
-                    </form>
+                    <table class="table">
+                        {{ form.as_table }}
+                    </table>
+                    <input class="btn btn-primary" type="submit" value="Create"/>
+                </form>
                 </p>
             </div>
         </div>
