--- a/yourvocab/static/css/yourvocab.css
+++ b/yourvocab/static/css/yourvocab.css
@@ -15,8 +15,8 @@ html, body {
 }
 
 .navbar {
-  margin-bottom: 0;
-  border-radius: 0;
+    margin-bottom: 0;
+    border-radius: 0;
 }
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -27,23 +27,38 @@ html, body {
 
 /* Set gray background color and 100% height */
 .sidenav {
-  padding-top: 20px;
-  background-color: #f1f1f1;
-  height: 100%;
+    padding-top: 20px;
+    background-color: #f1f1f1;
+    height: 100%;
 }
 
 /* Set black background color, white text and some padding */
 footer {
-  background-color: #555;
-  color: white;
-  padding: 15px;
+    background-color: #555;
+    color: white;
+    padding: 15px;
 }
 
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
-  .sidenav {
-    height: auto;
-    padding: 15px;
-  }
-  .row.content {height:auto;}
+    .sidenav {
+        height: auto;
+        padding: 15px;
+    }
+
+    .row.content {
+        height: auto;
+    }
+}
+
+#editor_questions {
+    height: 600px;
+    width: 400px;
+    margin: 10px;
+}
+
+#editor_answers {
+    height: 600px;
+    width: 400px;
+    margin: 10px;
 }
