--- a/yourvocab/templates/yourvocab/new_lesson.html
+++ b/yourvocab/templates/yourvocab/new_lesson.html
@@ -58,7 +58,7 @@
                             </td>
                         </tr>
                     </table>
-                    <input class='btn btn-primary' type="submit" value="Create"/>
+                    <input class='btn btn-primary' type="submit" value="Save"/>
                 </form>
                 </p>
             </div>
