--- a/yourvocab/templates/base.html
+++ b/yourvocab/templates/base.html
@@ -14,6 +14,8 @@
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/yourvocab.css' %}">
+
+    <script src="{% static 'js/yourvocab.js' %}"></script>
 </head>
 
 <body>
