--- a/yourvocab/templates/yourvocab/course.html
+++ b/yourvocab/templates/yourvocab/course.html
@@ -16,6 +16,8 @@
         <div class="post">
             <h2 class="d-inline-block"><a class="pt-3 pr-3" href="/course/{{ course.id }}/lesson/{{ lesson.id }}">{{ lesson.name }}</a></h2>
             <a href="/course/{{ course.id }}/lesson/{{ lesson.id }}/check" class="btn btn-outline-primary d-inline-block mb-3">Run lesson</a>
+            <a href="/course/{{ course.id }}/lesson/{{ lesson.id }}/stats" class="btn btn-outline-primary d-inline-block mb-3">View stats</a>
+            <a onclick="delete_lesson(this.parentNode, '/course/{{ course.id }}/lesson/{{ lesson.id }}/delete');" class="btn btn-outline-danger d-inline-block mb-3">Delete lesson</a>
         </div>
     {% endfor %}
 </div>
