moving foreign code to vendor folder for github

--- a/yourvocab/templates/yourvocab/new_lesson.html
+++ b/yourvocab/templates/yourvocab/new_lesson.html
@@ -63,7 +63,7 @@
     </div>
 
     {% load static %}
-    <script src="{% static 'js/ace.js' %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static 'js/vendor/ace.js' %}" type="text/javascript" charset="utf-8"></script>
     <script>
         var editor = ace.edit("editor_questions");
         editor.session.setMode("ace/mode/text");
