--- a/yourvocab/templates/base.html
+++ b/yourvocab/templates/base.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap core CSS -->
     {% load static %}
 
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/vendor/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/yourvocab.css' %}">
 
     <script src="{% static 'js/yourvocab.js' %}"></script>
@@ -60,8 +60,8 @@
 </div>
 
 <!-- Bootstrap core JavaScript -->
-<script src="{% static 'js/jquery.slim.min.js' %}"></script>
-<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'js/vendor/jquery.slim.min.js' %}"></script>
+<script src="{% static 'js/vendor/bootstrap.bundle.min.js' %}"></script>
 
 </body>
 
