stats after editing the lesson

--- a/yourvocab/templates/yourvocab/lesson_stats.html
+++ b/yourvocab/templates/yourvocab/lesson_stats.html
@@ -42,12 +42,8 @@
                         "xAxes": [{
                             type: 'time',
                             time: {
-                                parser: "YYYY-M-D HH:mm",
-                                unit: 'minute',
-                                unitStepSize: 1,
-                                displayFormats: {
-                                    'minute': 'YYYY-M-D HH:mm',
-                                }
+                                parser: 'YYYY-MM-DD HH:mm',
+                                unit: 'day',
                             }
                         }],
                         "yAxes": [{
