--- a/yourvocab/templates/registration/login.html
+++ b/yourvocab/templates/registration/login.html
@@ -13,6 +13,9 @@
         </table>
         <button class='btn btn-primary' type="submit">Log in</button>
         <div>
+            <a href="/passreset">Forgot password?</a>
+        </div>
+        <div>
             <a href="/signup">New to YourVocab? Sign up</a>
         </div>
     </form>
